[package]
name = "antavo-flow-test"
version = "0.1.0"
edition = "2024"
publish = ["thonid"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
percent-encoding = "2"
jiff = "0.2"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
http = "1"
uuid = { version = "1", features = ["v4"] }
